<resources>
    <string name="app_name">çiftlikpazarım.com</string>
    <string name="home">Ana Sayfa</string>
    <string name="favorites">Favoriler</string>
    <string name="add_advert">Yeni İlan</string>
    <string name="messages">Mesajlar</string>
    <string name="profile">Profil</string>
    <string name="email_address">Email Adresi</string>
    <string name="password">Şifre</string>
    <string name="dummy_email">abc@gmail.com</string>
    <string name="login">Giriş Yap</string>
    <string name="enter_phone_number">Telefon No (535 500 50 50)</string>
    <string name="sign_up">Kayıt Ol</string>
    <string name="name_surname">İsim Soyisim</string>
    <string name="enter_password">Şifre Giriniz</string>
    <string name="wrong_uname_pass">Yanlış kullanıcı adı veya şifre</string>
    <string name="error_occurred">Bir hata oluştu</string>
    <string name="small_cattle">Küçükbaş Hayvanlar</string>
    <string name="bee_production">Arıcılık</string>
    <string name="machine">Makine</string>
    <string name="farming">Tarım</string>
    <string name="coop_animals">Kümes Hayvanları</string>
    <string name="cows">Büyükbaş Hayvanlar</string>
    <string name="select_photo">Fotoğraf Seçiniz</string>
    <string name="advert_title">İlan Başlığı</string>
    <string name="advert_explanation">İlan Açıklaması</string>
    <string name="price">Fiyat (TL)</string>
    <string name="advert_add">İlan Ekle</string>
    <string name="select_city">Şehir Seçiniz</string>
    <string name="select_category">Kategori Seçiniz</string>
    <string name="adverts_not_found">Seçtiğiniz kategoride ilan bulunamadı</string>
    <string name="advert_details">İlan Detayları</string>
    <string name="price_text">Fiyat</string>
    <string name="city">Şehir</string>
    <string name="description">Açıklama</string>
    <string name="advert_owner_details">Satıcı Bilgileri</string>
    <string name="name_colon">İsim :</string>
    <string name="phone_colon">Telefon :</string>
    <string name="retry">Tekrar dene</string>
    <string name="check_your_connection">Bir hata oluştu.\nİnternet bağlantınızı kontrol ediniz.</string>
    <string name="search_not_found">Aradığınız ilan bulunamadı.</string>
    <string name="search_advert">İlan arayın</string>
    <string name="search_results">Arama Sonuçları</string>
    <string name="messages_shown_here">Mesajlarınız burada görünür.</string>
    <string name="messaging">Mesajlaşma</string>
    <string name="add_to_favorites">Favorilere Ekle</string>
    <string name="send_message">Mesaj Gönder</string>
    <string name="added_to_favorites">İlan favorilere eklendi.</string>
    <string name="remove_from_favorites">Favorilerden Kaldır</string>
    <string name="removed_from_favorites">İlan favorilerden kaldırıldı.</string>
    <string name="your_favorites_here">Favorileriniz burada gözükür</string>
    <string name="my_account">Hesabım</string>
    <string name="email_colon">Email :</string>
    <string name="my_adverts">İlanlarım</string>
    <string name="update_my_info">Bilgilerimi Güncelle</string>
    <string name="log_out">Çıkış Yap</string>
    <string name="save">Kaydet</string>
    <string name="enter_new_password">Yeni şifrenizi giriniz</string>
    <string name="enter_password_again">Şifreyi tekrar giriniz</string>
    <string name="change_my_password">Şifremi değiştir</string>
    <string name="password_requirements">-Boşluk bırakmayınız.\n-En az 8 karakter giriniz.</string>


    <string-array name="categories">
        <item>Büyükbaş Hayvanlar</item>
        <item>Küçükbaş Hayvanlar</item>
        <item>Kümes Hayvanları</item>
        <item>Arıcılık</item>
        <item>Tarım</item>
        <item>Makine</item>
    </string-array>

    <string-array name="cities">
        <item>Adana</item>
        <item>Adıyaman</item>
        <item>Afyonkarahisar</item>
        <item>Ağrı</item>
        <item>Aksaray</item>
        <item>Amasya</item>
        <item>Ankara</item>
        <item>Antalya</item>
        <item>Ardahan</item>
        <item>Artvin</item>
        <item>Aydın</item>
        <item>Balıkesir</item>
        <item>Bartın</item>
        <item>Batman</item>
        <item>Bayburt</item>
        <item>Bilecik</item>
        <item>Bingöl</item>
        <item>Bitlis</item>
        <item>Bolu</item>
        <item>Burdur</item>
        <item>Bursa</item>
        <item>Çanakkale</item>
        <item>Çankırı</item>
        <item>Çorum</item>
        <item>Denizli</item>
        <item>Diyarbakır</item>
        <item>Düzce</item>
        <item>Edirne</item>
        <item>Elazığ</item>
        <item>Erzincan</item>
        <item>Erzurum</item>
        <item>Eskişehir</item>
        <item>Gaziantep</item>
        <item>Giresun</item>
        <item>Gümüşhane</item>
        <item>Hakkari</item>
        <item>Hatay</item>
        <item>Iğdır</item>
        <item>Isparta</item>
        <item>İçel</item>
        <item>İstanbul</item>
        <item>İzmir</item>
        <item>Kahramanmaraş</item>
        <item>Karabük</item>
        <item>Karaman</item>
        <item>Kars</item>
        <item>Kastamonu</item>
        <item>Kayseri</item>
        <item>Kilis</item>
        <item>Kırklareli</item>
        <item>Kırıkkale</item>
        <item>Kırşehir</item>
        <item>Kocaeli</item>
        <item>Konya</item>
        <item>Kütahya</item>
        <item>Malatya</item>
        <item>Manisa</item>
        <item>Mardin</item>
        <item>Muğla</item>
        <item>Muş</item>
        <item>Nevşehir</item>
        <item>Niğde</item>
        <item>Ordu</item>
        <item>Osmaniye</item>
        <item>Rize</item>
        <item>Sakarya</item>
        <item>Samsun</item>
        <item>Siirt</item>
        <item>Sinop</item>
        <item>Sivas</item>
        <item>Şırnak</item>
        <item>Tekirdağ</item>
        <item>Tokat</item>
        <item>Trabzon</item>
        <item>Tunceli</item>
        <item>Şanlıurfa</item>
        <item>Uşak</item>
        <item>Van</item>
        <item>Yalova</item>
        <item>Yozgat</item>
        <item>Zonguldak</item>
    </string-array>

</resources>
