<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites" />
    <item
        android:id="@+id/newAdvertFragment"
        android:icon="@drawable/ic_add"
        android:title="@string/add_advert" />
    <item
        android:id="@+id/messagesPreviewFragment"
        android:icon="@drawable/ic_messages"
        android:title="@string/messages" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>
