<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:iconifiedByDefault="false"
            android:padding="4dp"
            app:defaultQueryHint="@string/search_advert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sheepButton"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:text="@string/small_cattle"
            android:textAllCaps="false"
            app:cornerRadius="24dp"
            app:icon="@drawable/ic_sheep"
            app:iconGravity="textTop"
            app:iconPadding="12dp"
            app:iconSize="60dp"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cowButton"
            app:layout_constraintTop_toBottomOf="@id/searchView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/beeButton"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:text="@string/bee_production"
            android:textAllCaps="false"
            app:cornerRadius="24dp"
            app:icon="@drawable/ic_bee"
            app:iconGravity="textTop"
            app:iconPadding="12dp"
            app:iconSize="60dp"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/chickenButton"
            app:layout_constraintTop_toBottomOf="@+id/sheepButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/machineButton"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:text="@string/machine"
            android:textAllCaps="false"
            app:cornerRadius="24dp"
            app:icon="@drawable/ic_machine"
            app:iconGravity="textTop"
            app:iconPadding="12dp"
            app:iconSize="60dp"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/farmButton"
            app:layout_constraintTop_toBottomOf="@+id/beeButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cowButton"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/cows"
            android:textAllCaps="false"
            app:cornerRadius="24dp"
            app:icon="@drawable/ic_cow"
            app:iconGravity="textTop"
            app:iconPadding="12dp"
            app:iconSize="60dp"
            app:iconTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/farmButton"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/farming"
            android:textAllCaps="false"
            app:cornerRadius="24dp"
            app:icon="@drawable/ic_farm"
            app:iconGravity="textTop"
            app:iconPadding="12dp"
            app:iconSize="60dp"
            app:iconTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chickenButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/chickenButton"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/coop_animals"
            android:textAllCaps="false"
            app:cornerRadius="24dp"
            app:icon="@drawable/ic_chicken"
            app:iconGravity="textTop"
            app:iconPadding="12dp"
            app:iconSize="60dp"
            app:iconTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cowButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
